Fixed image in 404, collapsing menus in sub-folders, updated footer year.
cr https://code.amazon.com/reviews/CR-17384328

--- a/workshop/themes/learn/static/css/theme.css
+++ b/workshop/themes/learn/static/css/theme.css
@@ -261,7 +261,7 @@ textarea:focus, input[type="email"]:focus, input[type="number"]:focus, input[typ
 #sidebar ul.topics ul ul {
     padding-bottom: 0;
 }
-#sidebar ul.topics li.parent ul, #sidebar ul.topics > li.active ul {
+#sidebar ul.topics li.parent > ul {
     display: block;
 }
 #sidebar ul.topics > li > a {
